--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
+    "date-fns": "^2.29.3",
     "nestjs-telegraf": "^2.6.3",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
