--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "date-fns": "^2.29.3",
+    "nest-puppeteer": "^1.1.1",
     "nestjs-telegraf": "^2.6.3",
     "pg": "^8.9.0",
+    "puppeteer": "^19.7.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.28.0",
@@ -41,6 +43,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/puppeteer": "^7.0.4",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
